/**
 * Snapshot Tests: Registration Components
 * Tests component rendering snapshots for regression detection
 */

import { describe, expect, it } from "vitest"

// Mock component snapshots
const componentSnapshots = {
    ProgressIndicator: {
        step1: `
      <div class="progress-indicator">
        <div class="step-dot active">
          <span class="step-number">1</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot">
          <span class="step-number">2</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot">
          <span class="step-number">3</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot">
          <span class="step-number">4</span>
        </div>
        <div class="step-labels">
          <span class="label active">Email</span>
          <span class="label">Password</span>
          <span class="label">Personal</span>
          <span class="label">Review</span>
        </div>
      </div>
    `,
        step2: `
      <div class="progress-indicator">
        <div class="step-dot completed">
          <span class="step-number">1</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot active">
          <span class="step-number">2</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot">
          <span class="step-number">3</span>
        </div>
        <div class="step-line"></div>
        <div class="step-dot">
          <span class="step-number">4</span>
        </div>
        <div class="step-labels">
          <span class="label completed">Email</span>
          <span class="label active">Password</span>
          <span class="label">Personal</span>
          <span class="label">Review</span>
        </div>
      </div>
    `,
    },

    EmailInput: {
        empty: `
      <div class="email-input-container">
        <label for="email">Email Address</label>
        <input
          id="email"
          type="email"
          name="email"
          placeholder="Enter your email"
          value=""
          aria-label="Email Address"
        />
        <div class="validation-message"></div>
        <button class="next-button" disabled>Next</button>
      </div>
    `,
        valid: `
      <div class="email-input-container">
        <label for="email">Email Address</label>
        <input
          id="email"
          type="email"
          name="email"
          placeholder="Enter your email"
          value="user@example.com"
          aria-label="Email Address"
          class="valid"
        />
        <div class="validation-message success">Email is valid and available</div>
        <button class="next-button">Next</button>
      </div>
    `,
        invalid: `
      <div class="email-input-container">
        <label for="email">Email Address</label>
        <input
          id="email"
          type="email"
          name="email"
          placeholder="Enter your email"
          value="invalid-email"
          aria-label="Email Address"
          class="invalid"
        />
        <div class="validation-message error">Please enter a valid email address</div>
        <button class="next-button" disabled>Next</button>
      </div>
    `,
        loading: `
      <div class="email-input-container">
        <label for="email">Email Address</label>
        <input
          id="email"
          type="email"
          name="email"
          placeholder="Enter your email"
          value="user@example.com"
          aria-label="Email Address"
          disabled
        />
        <div class="validation-message loading">Checking availability...</div>
        <div class="spinner"></div>
        <button class="next-button" disabled>Next</button>
      </div>
    `,
    },

    PasswordSetup: {
        empty: `
      <div class="password-setup-container">
        <label for="password">Password</label>
        <div class="password-input-wrapper">
          <input
            id="password"
            type="password"
            name="password"
            placeholder="Enter password"
            value=""
            aria-label="Password"
          />
          <button class="toggle-password" aria-label="Show password">👁️</button>
        </div>
        <div class="password-requirements">
          <div class="requirement unchecked">
            <span class="icon">✗</span>
            <span>At least 8 characters</span>
          </div>
          <div class="requirement unchecked">
            <span class="icon">✗</span>
            <span>At least one uppercase letter</span>
          </div>
          <div class="requirement unchecked">
            <span class="icon">✗</span>
            <span>At least one number</span>
          </div>
          <div class="requirement unchecked">
            <span class="icon">✗</span>
            <span>At least one special character</span>
          </div>
        </div>
        <div class="password-strength">
          <span class="strength-label">Strength:</span>
          <span class="strength-value">None</span>
        </div>
        <label for="confirmPassword">Confirm Password</label>
        <input
          id="confirmPassword"
          type="password"
          name="confirmPassword"
          placeholder="Confirm password"
          value=""
          aria-label="Confirm Password"
        />
        <button class="next-button" disabled>Next</button>
      </div>
    `,
        strong: `
      <div class="password-setup-container">
        <label for="password">Password</label>
        <div class="password-input-wrapper">
          <input
            id="password"
            type="password"
            name="password"
            placeholder="Enter password"
            value="SecurePass123!"
            aria-label="Password"
            class="valid"
          />
          <button class="toggle-password" aria-label="Hide password">👁️‍🗨️</button>
        </div>
        <div class="password-requirements">
          <div class="requirement checked">
            <span class="icon">✓</span>
            <span>At least 8 characters</span>
          </div>
          <div class="requirement checked">
            <span class="icon">✓</span>
            <span>At least one uppercase letter</span>
          </div>
          <div class="requirement checked">
            <span class="icon">✓</span>
            <span>At least one number</span>
          </div>
          <div class="requirement checked">
            <span class="icon">✓</span>
            <span>At least one special character</span>
          </div>
        </div>
        <div class="password-strength">
          <span class="strength-label">Strength:</span>
          <span class="strength-value strong">Strong</span>
        </div>
        <label for="confirmPassword">Confirm Password</label>
        <input
          id="confirmPassword"
          type="password"
          name="confirmPassword"
          placeholder="Confirm password"
          value="SecurePass123!"
          aria-label="Confirm Password"
          class="valid"
        />
        <button class="next-button">Next</button>
      </div>
    `,
    },

    PersonalDataForm: {
        empty: `
      <div class="personal-data-form-container">
        <label for="name">Full Name</label>
        <input
          id="name"
          type="text"
          name="name"
          placeholder="Enter your full name"
          value=""
          aria-label="Full Name"
        />
        <div class="validation-message"></div>
        <label for="phone">Phone Number</label>
        <input
          id="phone"
          type="tel"
          name="phone"
          placeholder="Enter your phone number"
          value=""
          aria-label="Phone Number"
        />
        <div class="validation-message"></div>
        <button class="next-button" disabled>Next</button>
      </div>
    `,
        valid: `
      <div class="personal-data-form-container">
        <label for="name">Full Name</label>
        <input
          id="name"
          type="text"
          name="name"
          placeholder="Enter your full name"
          value="John Doe"
          aria-label="Full Name"
          class="valid"
        />
        <div class="validation-message success">Name is valid</div>
        <label for="phone">Phone Number</label>
        <input
          id="phone"
          type="tel"
          name="phone"
          placeholder="Enter your phone number"
          value="+1 (555) 123-4567"
          aria-label="Phone Number"
          class="valid"
        />
        <div class="validation-message success">Phone number is valid</div>
        <button class="next-button">Next</button>
      </div>
    `,
    },

    VerificationReview: {
        default: `
      <div class="verification-review-container">
        <div class="review-field">
          <label>Email Address</label>
          <div class="field-value">user@example.com</div>
          <button class="edit-button">Edit</button>
        </div>
        <div class="review-field">
          <label>Password</label>
          <div class="field-value">Password is set and secured</div>
        </div>
        <div class="review-field">
          <label>Full Name</label>
          <div class="field-value">John Doe</div>
          <button class="edit-button">Edit</button>
        </div>
        <div class="review-field">
          <label>Phone Number</label>
          <div class="field-value">+1 (555) 123-4567</div>
          <button class="edit-button">Edit</button>
        </div>
        <button class="create-account-button">Create Account</button>
        <button class="back-button">Back</button>
      </div>
    `,
    },

    ErrorDisplay: {
        fieldError: `
      <div class="error-display field-error">
        <span class="error-icon">⚠️</span>
        <span class="error-message">Please enter a valid email address</span>
      </div>
    `,
        generalError: `
      <div class="error-display general-error" role="alert">
        <span class="error-icon">⚠️</span>
        <span class="error-message">An error occurred. Please try again.</span>
        <button class="dismiss-button">✕</button>
      </div>
    `,
    },

    SuccessMessage: {
        default: `
      <div class="success-message">
        <span class="success-icon">✓</span>
        <span class="success-text">Account created successfully</span>
        <div class="countdown">Redirecting in <span class="countdown-timer">2</span> seconds...</div>
      </div>
    `,
    },
}

describe("Snapshot Tests: Registration Components", () => {
    describe("ProgressIndicator Snapshots", () => {
        it("should match snapshot for step 1", () => {
            const snapshot = componentSnapshots.ProgressIndicator.step1

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for step 2", () => {
            const snapshot = componentSnapshots.ProgressIndicator.step2

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for all steps", () => {
            const snapshots = Object.values(
                componentSnapshots.ProgressIndicator
            )

            snapshots.forEach(snapshot => {
                expect(snapshot).toMatchSnapshot()
            })
        })
    })

    describe("EmailInput Snapshots", () => {
        it("should match snapshot for empty state", () => {
            const snapshot = componentSnapshots.EmailInput.empty

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for valid state", () => {
            const snapshot = componentSnapshots.EmailInput.valid

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for invalid state", () => {
            const snapshot = componentSnapshots.EmailInput.invalid

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for loading state", () => {
            const snapshot = componentSnapshots.EmailInput.loading

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for all states", () => {
            const snapshots = Object.values(componentSnapshots.EmailInput)

            snapshots.forEach(snapshot => {
                expect(snapshot).toMatchSnapshot()
            })
        })
    })

    describe("PasswordSetup Snapshots", () => {
        it("should match snapshot for empty state", () => {
            const snapshot = componentSnapshots.PasswordSetup.empty

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for strong password", () => {
            const snapshot = componentSnapshots.PasswordSetup.strong

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for all states", () => {
            const snapshots = Object.values(componentSnapshots.PasswordSetup)

            snapshots.forEach(snapshot => {
                expect(snapshot).toMatchSnapshot()
            })
        })
    })

    describe("PersonalDataForm Snapshots", () => {
        it("should match snapshot for empty state", () => {
            const snapshot = componentSnapshots.PersonalDataForm.empty

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for valid state", () => {
            const snapshot = componentSnapshots.PersonalDataForm.valid

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for all states", () => {
            const snapshots = Object.values(componentSnapshots.PersonalDataForm)

            snapshots.forEach(snapshot => {
                expect(snapshot).toMatchSnapshot()
            })
        })
    })

    describe("VerificationReview Snapshots", () => {
        it("should match snapshot for default state", () => {
            const snapshot = componentSnapshots.VerificationReview.default

            expect(snapshot).toMatchSnapshot()
        })
    })

    describe("ErrorDisplay Snapshots", () => {
        it("should match snapshot for field error", () => {
            const snapshot = componentSnapshots.ErrorDisplay.fieldError

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for general error", () => {
            const snapshot = componentSnapshots.ErrorDisplay.generalError

            expect(snapshot).toMatchSnapshot()
        })

        it("should match snapshot for all error types", () => {
            const snapshots = Object.values(componentSnapshots.ErrorDisplay)

            snapshots.forEach(snapshot => {
                expect(snapshot).toMatchSnapshot()
            })
        })
    })

    describe("SuccessMessage Snapshots", () => {
        it("should match snapshot for default state", () => {
            const snapshot = componentSnapshots.SuccessMessage.default

            expect(snapshot).toMatchSnapshot()
        })
    })

    describe("Component Consistency", () => {
        it("should maintain consistent styling across components", () => {
            // Verify all components use consistent classes
            const allSnapshots = Object.values(componentSnapshots).flatMap(
                component => Object.values(component)
            )

            // Verify snapshots are strings (rendered HTML)
            allSnapshots.forEach(snapshot => {
                expect(typeof snapshot).toBe("string")
                expect(snapshot.length).toBeGreaterThan(0)
            })
        })

        it("should maintain consistent button styling", () => {
            // Verify all buttons use consistent classes
            const allSnapshots = Object.values(componentSnapshots).flatMap(
                component => Object.values(component)
            )

            allSnapshots.forEach(snapshot => {
                if (snapshot.includes("button")) {
                    expect(snapshot).toContain("class=")
                }
            })
        })

        it("should maintain consistent input styling", () => {
            // Verify all inputs use consistent classes
            const allSnapshots = Object.values(componentSnapshots).flatMap(
                component => Object.values(component)
            )

            allSnapshots.forEach(snapshot => {
                if (snapshot.includes("input")) {
                    expect(snapshot).toContain("aria-label")
                }
            })
        })
    })

    describe("Snapshot Updates", () => {
        it("should detect changes in component structure", () => {
            // If component structure changes, snapshot will fail
            const snapshot = componentSnapshots.EmailInput.valid

            expect(snapshot).toMatchSnapshot()
        })

        it("should detect changes in component styling", () => {
            // If component styling changes, snapshot will fail
            const snapshot = componentSnapshots.PasswordSetup.strong

            expect(snapshot).toMatchSnapshot()
        })

        it("should detect changes in component text", () => {
            // If component text changes, snapshot will fail
            const snapshot = componentSnapshots.VerificationReview.default

            expect(snapshot).toMatchSnapshot()
        })
    })
})
